# frtclap

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  enums.cpp  rename.cpp  simple_example.cpp  subcommands.cpp
include/: frtclap.hpp
include/frtclap/: enum.hpp  field_count.hpp  field_name.hpp  field_type.hpp  magic_enums.hpp  parse.hpp  print_help.hpp  rename.hpp  size_t_.hpp  subcommand.hpp  subcommand_name.hpp  tie_as_tuple.hpp
include/frtclap/detail/: constexpr_2_step.hpp  enum_sequence.hpp  fake_object.hpp  fixed_string.hpp  parse.hpp  parse_from_span.hpp  parse_from_string.hpp  tie_as_tuple_generated.hpp  tokenizer.hpp  type_traits.hpp
